DIV + Título 2 & párrafos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,15 @@
   <link rel="stylesheet" href="./styles/styles.css">
   <title>PB1</title>
 </head>
+
 <body>
-  <h1>Título 2</h1>
+  <div class="intro">
+    <h1>Título 2</h1>
+    <h2>Sembrando oportunidades</h2>
+    <p>Somos una ONG dedicada a la enseñanza cultivos en los hogares</p>
+    <p>Esta ONG ha sido creada en el 2010</p>
+    <p>Nuestro lema es <em>cultivando tus alimentos cultivas tu salud</em></p>
+  </div>
 </body>
+
 </html>
