Apartado de Donaciones

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
     <p>Nuestro lema es <em>cultivando tus alimentos cultivas tu salud</em></p>
   </div>
 </body>
+<div class="donaciones">
+  <h2>Donaciones</h2>
+  <p>Puedes realizar donanciones al CBU: 48701046600000093170 Banco HSBC</p>
+</div>
 
 </html>
