Sumo imágenes de fotógrafo

--- a/index.html
+++ b/index.html
@@ -11,16 +11,40 @@
 
 <body>
   <div class="intro">
-    <h1>Título 2</h1>
-    <h2>Sembrando oportunidades</h2>
+    <h1 class="for-h1">HerbWorld</h1>
+    <h2 class="for-h2">Sembrando oportunidades</h2>
     <p>Somos una ONG dedicada a la enseñanza cultivos en los hogares</p>
     <p>Esta ONG ha sido creada en el 2010</p>
     <p>Nuestro lema es <em>cultivando tus alimentos cultivas tu salud</em></p>
   </div>
 </body>
-<div class="donaciones">
+<div class="for-divs">
   <h2>Donaciones</h2>
   <p>Puedes realizar donanciones al CBU: 48701046600000093170 Banco HSBC</p>
 </div>
+
+<div class="for-divs">
+  <h2>Esto es lo que la lechuga puede hacer por tu cuerpo</h2>
+  <p>
+    <img src="./img/lechuga.jpg" class="for-img" alt="">
+    ¿Qué sabes sobre la lechuga? ¿Cuáles son sus principales nutrientes? ¿Qué aporta a nuestro organismo? ¿Qué pasa si
+    no se lava bien antes de consumir? ¿Qué hacer si te produce gases? Si quieres aprender más sobre el ingrediente
+    estrella de la ensalada, lee lo que las expertas han contado a CuídatePlus.
+  </p>
+</div>
+
+
+<div class="for-divs">
+  <h2>Qué es la rúcula y para qué sirve</h2>
+  <p>
+    <img src="./img/rucula.jpg" class="for-img" alt="">
+    La rúcula (Erucula vesicaria) es una verdura picante que tiene su origen en la región mediterránea, donde se
+    consume al menos desde la época romana, cuando se consideraba un afrodisiaco. También se conoce como arúgula,
+    rúgula, ruqueta, jaramago o berro italiano. Es una crucífera como la col rizada, el brócoli o las coles de Bruselas
+    y brinda muchos de sus mismos beneficios.
+  </p>
+</div>
+
+
 
 </html>
