Agregado de los h2

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   </div>
 </body>
 <div class="for-divs">
-  
+  <h2>Donaciones</h2>
   <p>Puedes realizar donanciones al CBU: 48701046600000093170 Banco HSBC</p>
 </div>
 
 <div class="for-divs">
-  
+  <h2>Esto es lo que la lechuga puede hacer por tu cuerpo</h2>
   <p>
     <img src="./img/lechuga.jpg" class="for-img" alt="">
     ¿Qué sabes sobre la lechuga? ¿Cuáles son sus principales nutrientes? ¿Qué aporta a nuestro organismo? ¿Qué pasa si
